# Light_Installation

./: .gitignore  .gitmodules  README.md  run.py
.devcontainer/MBSE_doc/: devcontainer.json
.devcontainer/Textual_doc/: devcontainer.json
.devcontainer/Textual_simulator_features/: devcontainer.json
.devcontainer/Textual_simulator_unit_tests/: devcontainer.json
.devcontainer/doc/: devcontainer.json
.github/workflows/: documentation.yml  electronics_crossConnector_createFabricationData.yml  electronics_crossConnector_createRelease.yml  electronics_ledConnector_createFabricationData.yml  electronics_ledConnector_createRelease.yml  electronics_mainboard_createFabricationData.yml  electronics_mainboard_createRelease.yml  mechanics_clamp_build.yml  mechanics_clamp_createRelease.yml  mechanics_plate_createRelease.yml  textual_simulator_feature_tests.yml  textual_simulator_unit_tests.yml
MBSE/doc/: Dockerfile  docker-compose.yml  run.py
MBSE/doc/source/: conf.py  development_environment.rst  index.rst  model_documentation.rst  toolchain_local.drawio
MBSE/doc/source/_static/: custom.css
MBSE/model/code_generator/: .project
MBSE/model/code_generator/tasks/: generateTarget.xml
MBSE/model/model/: model.uml
MBSE/workspace/code_generator/: .project
MBSE/workspace/code_generator/src/: generate.mtl  module-info.java
MBSE/workspace/code_generator/tasks/: generate.xml
MBSE/workspace/model/: model.notation  model.profile.notation  model.profile.uml  model.uml  readme.txt
MBSE/workspace/model/code/: .gitignore  LedStrip.cpp  LedStrip.h  LedStrip_Factory.cpp  LedStrip_Factory.h  LedStrip_Factory_Interface.h  LedStrip_Interface.h  LedStrips.cpp  LedStrips.h  RunningLight.cpp  RunningLight.h  Wave.h
Shared/: build_kibot_container.sh  shared.py
Shared/electronics/: create_production_data.sh
Shared/electronics/cross_connector/: .gitignore  cross_connector.kibot.yaml  sym-lib-table
Shared/electronics/cross_connector/openscad/: edge-cuts.dxf
Shared/electronics/led_connector/: .gitignore  fp-lib-table  led_connector.kicad_pcb  led_connector.kicad_pro  led_connector.kicad_sch
Shared/electronics/led_connector/openscad/: edge-cuts.scad
Shared/mechanics/assembly/: assembly.kibot.yaml  assembly.scad  create3d.sh
Shared/mechanics/clamp/: clamp.scad
Shared/mechanics/plate/: plate.FCStd
Shared/project_management/: dispatcher.py  executor.py
Shared/python_shared/: shared.py
Shared/software/firmware/: platformio.ini
Shared/software/firmware_tests/: .gitignore  Dockerfile  makefile  run_tests.sh
Shared/software/firmware_tests/mocks/: WS2812FX.cpp
Shared/software/firmware_tests/tests/: LedStrip_Factory_test.cpp  LedStrip_test.cpp  LedStrips_test.cpp
Shared/software/simulator/: simulator.sh
Shared/software/simulator/features/: led_simulation.feature
Textual/: run.py
Textual/doc/: .gitignore  Dockerfile  docker-compose.yml  run.py
Textual/doc/source/: .gitignore  conf.py  index.rst
Textual/doc/source/_custom_extensions/: checked_file_hashes.py
Textual/doc/source/inspections/: index.rst
Textual/doc/source/reports/: index.rst
Textual/doc/source/requirements/: index.rst  (+3 more)
Textual/simulator/: run.py  simulator.sh
Textual/simulator/features/: 3d_model_simulation.feature  CMakeLists.txt  Dockerfile  Load_LED_pattern.feature  Simulate_LED_pattern.feature  Start_Simulator.feature  docker-compose.yml  run.py  run_cucumber.sh
Textual/simulator/features/step_definitions/: Start_Simulator__steps.cpp  steps.cpp
Textual/simulator/src/: Animator.cpp  Animator.h  Animator_Interface.h  CMakeLists.txt  simulator.cpp  simulator.h
Textual/simulator/unit_tests/: CMakeLists.txt  Dockerfile  docker-compose.yml  main.cpp  run.py
Textual/simulator/unit_tests/tests/: dummy_unit_test.cpp  simulator_tests.cpp
doc/: Dockerfile  docker-compose.yml  run.py
doc/source/: coding_rules.rst  conf.py  index.rst  toplevel_file_structure.rst
doc/source/_static/: .gitignore
electronics/: template.kicad_wks
electronics/cross_connector/: cross_connector.kibot.yaml  cross_connector.kicad_pcb  cross_connector.kicad_pro  cross_connector.kicad_sch  fp-lib-table
electronics/cross_connector/openscad/: edge-cuts.scad
electronics/led_connector/: sym-lib-table
electronics/led_connector/openscad/: edge-cuts.dxf
electronics/mainboard/: .gitignore  fp-lib-table  mainboard.kicad_pcb  mainboard.kicad_pro  mainboard.kicad_sch  mainboard.kicad_wks  sym-lib-table
mechanics/assembly/: assembly.scad  build_assembly_kibot.sh  create3d.sh
mechanics/clamp/: 3d_print_instructions  clamp.scad  distance.scad
mechanics/plate/: plate.FCStd
software/: firmware.code-workspace
software/firmware/: platformio.ini  rhapsody_sources.py
software/firmware/rhapsody/: .gitignore
software/firmware/src/: main.cpp
software/firmware/test/: .gitignore  Dockerfile  makefile  run_tests.sh
software/firmware_tests/: makefile  run_tests.sh
software/firmware_tests/mocks/: LedStrip_Factory_Mock.cpp  LedStrip_Factory_Mock.h  WS2812FX.h
software/firmware_tests/tests/: LedStrip_test.cpp
software/simulator/: .gitignore  Animator.cpp  CMakeLists.txt  leds.gnu  run.sh  simulator.cpp  simulator.gnu  simulator.h  simulator.m  simulator.py
software/simulator/features/: CMakeLists.txt  Dockerfile  led_simulation.feature  run_cucumber.sh
software/simulator/features/step_definitions/: StepDefinitionRunner.cpp  led_simulation_steps.cpp
software/simulator/features/steps/: steps.py
software/simulator/src/: Animator.cpp  CMakeLists.txt  IAnimator.h
(+66 files in other folders)
